@@ -5,6 +5,9 @@
     browser.tabs.closeWindowWithLastTab, which means those who are used to :tabclose never closing
     the window when closing the last tab, should set this option to false (either through about:config
     or with :set! browser.tabs.closeWindowWithLastTab=false)
+    * Added setting for controlling if keypresses are passed to webpages when
+    outside of Insert/Passthrough modes (to revert to old setting,
+    :set passthrough=true)
 
 2015-08-25:
     * Version 3.10.1
